--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<p>編集画面</p>
+<%= form_with model: @user, url: "/users/#{@user.id}", method: :patch, local: true do |f| %>
+  <p><%= f.text_field :name %></p>
+  <p><%= f.text_field :age %></p>
+  <%= f.submit "送信" %>
+<% end %>
